# gemm_optimization_step_by_step

./: .gitignore  CMakeLists.txt  README.md  build.sh  common.cpp  common.h  gemm.cpp  gemm.h  main.cpp  record.hpp  run.sh  timer.h
backup/: build.sh  common.h  gemm.cpp
backup/cmake/: altas.cmake  cuda.cmake
backup/impl/cpu/: gemm_cpu.h  optimize5.cpp  optimize7.cpp  optimize9.cpp  optimize9_bk.cpp  other.cpp  raw.cpp
backup/impl/gpu/: err.h  optimize1.cu  optimize2.cu  tensor_core.cu
cmake/: config.h.in  cuda.cmake  utils.cmake
impl/: CMakeLists.txt
impl/cpu/: cblas.cpp  gemm_cpu.h  optimize1.cpp  optimize2.cpp  optimize3.cpp  optimize4.cpp  optimize5.cpp  optimize6.cpp  optimize7.cpp  optimize8.cpp  optimize8_bk.cpp  raw.cpp
impl/gpu/: cublas.cu  gemm_gpu.h  optimize1.cu  optimize2.cu  raw.cu  tensor_core.cu
include/: GemmBase.hpp  GemmFactory.hpp  GemmTest.hpp  GemmTestCase.hpp  common.h  reader.hpp  recorder.hpp  timer.hpp
include/cpu/: cpu_cblas.h  cpu_opt1.h  cpu_opt2.h  cpu_opt3.h  cpu_opt4.h  cpu_opt5.h  cpu_opt6.h  cpu_opt7.h  cpu_opt8.h  cpu_opt9.h  cpu_raw.h
include/gpu/: gpu_cublas.h  gpu_opt1.h  gpu_opt2.h  gpu_raw.h
src/: CMakeLists.txt  common.cpp  main.cpp
src/cpu/: cpu_cblas.cpp  cpu_opt1.cpp  cpu_opt2.cpp  cpu_opt3.cpp  cpu_opt4.cpp  cpu_opt5.cpp  cpu_opt6.cpp  cpu_opt7.cpp  cpu_opt8.cpp  cpu_opt9.cpp  cpu_raw.cpp
src/gpu/: CMakeLists.txt  gpu_cublas.cu  gpu_opt1.cu  gpu_opt2.cu  gpu_raw.cu
